# cross-ref-scanner

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
cross_ref_scanner/: __init__.py  cli.py  config.py  report.py  scanner.py
cross_ref_scanner/languages/: __init__.py  base.py  java.py  kotlin.py  python.py  typescript.py
tests/: test_config.py  test_java_adapter.py  test_report.py  test_scanner.py
tests/fixtures/source_java/src/main/java/com/example/: SharedModel.java  UnusedHelper.java  UsedService.java
tests/fixtures/source_py/app/: main.py
tests/fixtures/source_py/mylib/: utils.py
tests/fixtures/target_app/src/main/java/com/app/: MyApp.java
