[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cross-ref-scanner"
version = "0.1.0"
description = "Find unused symbols in a source project by scanning target projects for references"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Ingo" },
]
keywords = ["dead-code", "unused-code", "cross-reference", "scanner", "cleanup"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
cross-ref-scan = "cross_ref_scanner.cli:main"

[project.urls]
Homepage = "https://github.com/ingo/cross-ref-scanner"
Repository = "https://github.com/ingo/cross-ref-scanner"
Issues = "https://github.com/ingo/cross-ref-scanner/issues"

[tool.setuptools.packages.find]
include = ["cross_ref_scanner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
